--- a/MTM_Inventory_Application_Avalonia/Views/Dialogs/LocationPickerDialog.axaml
+++ b/MTM_Inventory_Application_Avalonia/Views/Dialogs/LocationPickerDialog.axaml
@@ -3,6 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:vm="clr-namespace:MTM_Inventory_Application_Avalonia.ViewModels.Dialogs"
+             xmlns:ia="clr-namespace:Projektanker.Icons.Avalonia;assembly=Projektanker.Icons.Avalonia"
              mc:Ignorable="d"
              x:Class="MTM_Inventory_Application_Avalonia.Views.Dialogs.LocationPickerDialog"
              x:DataType="vm:LocationPickerDialogViewModel">
@@ -10,17 +11,22 @@
     <vm:LocationPickerDialogViewModel />
   </Design.DataContext>
 
-  <Grid Margin="16" RowDefinitions="Auto,Auto,* ,Auto">
-    <TextBlock Grid.Row="0" Text="{Binding HeaderText}" FontSize="16"/>
+  <Grid Margin="20" RowDefinitions="Auto,Auto,*,Auto">
+    <Grid Grid.Row="0" ColumnDefinitions="Auto,*" VerticalAlignment="Center">
+      <Viewbox Grid.Column="0" Width="28" Height="28" Stretch="Uniform">
+        <ia:Icon Value="mdi:map-search-outline"/>
+      </Viewbox>
+      <TextBlock Grid.Column="1" Margin="8,0,0,0" Text="{Binding HeaderText}" FontSize="18"/>
+    </Grid>
 
-    <StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="8">
-      <TextBox Width="240" Watermark="Filter locations" Text="{Binding Filters_Text}"/>
+    <StackPanel Grid.Row="1" Orientation="Horizontal" Spacing="10" Margin="0,10,0,10" VerticalAlignment="Center">
+      <TextBox Width="260" Watermark="Filter locations" Text="{Binding Filters_Text}"/>
       <CheckBox Content="Non-zero OnHand" IsChecked="{Binding Filters_NonZeroOnly}"/>
       <CheckBox Content="Current Warehouse" IsChecked="{Binding Filters_CurrentWarehouseOnly}"/>
       <CheckBox Content="Current Site" IsChecked="{Binding Filters_CurrentSiteOnly}"/>
     </StackPanel>
 
-    <DataGrid Grid.Row="2" ItemsSource="{Binding Results}" AutoGenerateColumns="False" IsReadOnly="True">
+    <DataGrid Grid.Row="2" ItemsSource="{Binding Results}" AutoGenerateColumns="False" IsReadOnly="True" Margin="0,4,0,4">
       <DataGrid.Columns>
         <DataGridTextColumn Header="Location" Binding="{Binding Location}"/>
         <DataGridTextColumn Header="OnHand" Binding="{Binding OnHand}"/>
@@ -32,9 +38,19 @@
       </DataGrid.Columns>
     </DataGrid>
 
-    <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Spacing="8">
-      <Button Content="Select" Command="{Binding LocationPickerDialog_Button_SelectCommand}"/>
-      <Button Content="Cancel" Command="{Binding LocationPickerDialog_Button_CancelCommand}"/>
+    <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Spacing="10">
+      <Button Command="{Binding LocationPickerDialog_Button_SelectCommand}">
+        <StackPanel Orientation="Horizontal" Spacing="6">
+          <ia:Icon Value="mdi:check" Width="16" Height="16"/>
+          <TextBlock Text="Select"/>
+        </StackPanel>
+      </Button>
+      <Button Command="{Binding LocationPickerDialog_Button_CancelCommand}">
+        <StackPanel Orientation="Horizontal" Spacing="6">
+          <ia:Icon Value="mdi:close" Width="16" Height="16"/>
+          <TextBlock Text="Cancel"/>
+        </StackPanel>
+      </Button>
     </StackPanel>
   </Grid>
 </UserControl>
